--- a/package.json
+++ b/package.json
@@ -42,6 +42,9 @@
     "webpack-runner": "^3.1.0"
   },
   "dependencies": {
-    "@alethio/ui": "^1.0.0-beta.11"
+    "@alethio/ui": "^1.0.0-beta.11",
+    "abi-decoder": "^2.0.1",
+    "moment": "^2.24.0",
+    "semantic-ui-react": "^0.87.3"
   }
 }
