--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "main": "dist/index.js",
   "scripts": {
     "prepare": "npm run build",
+    "webpack": "webpack",
+    "start": "webpack-dev-server --open --mode development",
     "build": "npm run clean && npm run build-js-prod",
     "build-dev": "npm run clean && npm run build-js-dev",
     "watch": "webpack-runner --config=./webpack.config.dev.js --watch",
@@ -41,6 +43,7 @@
     "uglifyjs-webpack-plugin": "^1.2.5",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.7.2",
     "webpack-runner": "^3.1.0"
   },
   "dependencies": {
